Fix styles for panel items
- Removed `width: max-content` style from `panel-item` properly highlight entire row.
- Changed `panel-item-wrapper` to `display: inline` to properly position delete button for long (overflowing) item strings.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,6 @@
   text-align: left;
   /* Allow text to grow panel width, up to a limit. */
   max-width: 325px;
-  width: max-content;
 }
 .pinned-drops.panel-item:hover {
   background-color: #ffffff08;
@@ -52,7 +51,7 @@
 }
 .pinned-drops.panel-item-wrapper {
   max-width: 300px;
-  display: inline-block;
+  display: inline;
 }
 .pinned-drops.panel-item-wrapper img {
   height: 14px;
